fixing overflow

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html,
 body {
     /* height: 100%; */
     font-family: Taviraj, sans-serif;
-    overflow-x:hidden !important;
+    /* overflow-x:hidden !important; */
 }
 
 
@@ -66,8 +66,8 @@ li{
     padding-bottom: 12rem;
     transform: translateX(100%);
     list-style: none;
-    /* overflow-y :hidden; */
-    /* min-height: 100vh; */
+    overflow :hidden;
+
 }
 
 
